# dgb-skein-miner

./: .gitignore  README.md  config.json  pools.json  start-mine.bat  start-mine.sh  unison.json
native/: CMakeLists.txt  selftest_main.c  sha256d.c  sha256d.h  skein.c  skein.h  skein_avx2.c  skein_avx2.h  skein_bridge.c  skein_bridge.h  skein_dispatch.c  skein_dispatch.h  tcp_bridge.c  tcp_bridge.h  yescrypt.c  yescrypt.h  yescryptr16_bridge.c  yescryptr16_bridge.h
src/: Api.u  Args.u  Config.u  Header.u  Json.u  Log.u  Main.u  MinerLoop.u  Stats.u  Stratum.u  StratumMsg.u  Target.u  Worker.u
src/Algo/: Dispatch.u  YescryptR16.u
src/Hash/: Native.u  Skein.u  Vectors.u
src/Platform/: Tcp.u  Time.u
